--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       margin-top: 4px;
       padding: 8px 14px;
       border-radius: 999px;
-      border: 1px solid #9ca3af;
+      border: 1px solid #00040c;
       font-size: 14px;
       cursor: pointer;
     }
